<resources>
    <string name="app_name">Product Search</string>
    <string name="barcode">Barcode</string>
    <string name="search_button">Search Button</string>
    <string name="scan_barcode_button">Scan Barcode Button</string>
    <string name="barcode_">Barcode</string>
    <string name="success">Product Found</string>
    <string name="failure">Product Not Found</string>
    <string name="product_details">Product Details</string>
</resources>